<resources>
    <string name="warning_text">are you sure you want to do this?</string>
    <string name="app_name">GeoQuiz</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong.</string>
    <string name="next_button">Next</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="action_settings">Settings</string>
    <string name="question_oceans"> The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast"> The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa"> The source of the Nile River  is in Egypt.</string>
    <string name="question_americas"> The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the worlds\'s oldest and deepest freshwarer lake.</string>
    <string name="previous_button">Previous</string>
    <string name="title_activity_cheat">Cheat</string>

</resources>
