<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="24dp"
        android:id="@+id/question_text_view"
        />


    -<LinearLayout
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/true_button"
        android:id="@+id/true_button"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/false_button"
        android:id="@+id/false_button"/>

</LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/previous_buttton"
        android:drawableLeft="@drawable/arrow_left"
        android:text="@string/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button"
        />


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="4dp"
        />
</LinearLayout>
</LinearLayout>